2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix a few typos in the DTD,
	patch from Petteri Räty <petteri.raty@welho.com>

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c: Patch from Ed Catmur <ed@catmur.co.uk>
	to avoid warnings with the new x-content/ stuff in GNOME 2.22
	(Closes: #14362)

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Pino Toscano
	<pino@kde.org> to mark more comments as translatable
	(Closes: #14605)

	* Makefile.am: Add a check for untranslated comments
	in the check target

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Translate the CHM comment,
	spotted by Pino Toscano <pino@kde.org> (Closes: #14520)

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Pino Toscano
	to add a mime-type for EXR images (Closes: #6488)

	* tests/GammaChart.exr:
	* tests/list: Add a test case

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add "<Asx" as a possible
	magic for ASX files (Closes: GNOME #505398)

2008-02-05  Alexander Larsson  <alexl@redhat.com>

	* freedesktop.org.xml.in:
	Lower xml magic priority so that its lower than
	e.g. text/html.
	Patch from David Faure

2008-01-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.ttx: Patch from Christian Persch
	<chpe@gnome.org> to add the TTX font mime-type (Closes: #14318)

2008-01-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Paolo Borelli
	<pborelli@katamail.com> to add the Eiffel code mime-type
	(Closes: #14288)

2008-01-07  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Frederic Crozat
	<fcrozat@mandriva.com> to add LZMA archives (Closes: #13256)

=== shared-mime-info 0.23 ===

2007-12-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.23
	* Makefile.am: add HACKING file to the dist