@@ -2164,6 +2164,14 @@ command to generate the output files.
     <glob pattern="*.ssa"/>
     <glob pattern="*.ass"/>
   </mime-type>
+  <mime-type type="text/x-subviewer">
+    <sub-class-of type="text/plain"/>
+    <_comment>SubViewer subtitles</_comment>
+    <magic priority="50">
+      <match type="string" value="[INFORMATION]" offset="0"/>
+    </magic>
+    <glob pattern="*.sub"/>
+  </mime-type>
   <mime-type type="application/x-sv4cpio">
     <_comment>SV4 CPIO archive</_comment>
     <glob pattern="*.sv4cpio"/>
