@@ -58,6 +58,8 @@ subtitle-microdvd.sub text/x-microdvd x
 subtitle-mpsub.sub text/x-mpsub x
 # Copied from http://en.wikipedia.org/wiki/SubStation_Alpha
 subtitle.ssa text/x-ssa
+# Copied from http://wiki.videolan.org/SubViewer
+subtitle-subviewer.sub text/x-subviewer x
 
 # text
 text-iso8859-15.txt text/plain ox
