@@ -1,0 +1,16 @@
+[INFORMATION]
+[TITLE] Title of film.
+[AUTHOR] Author of film.
+[SOURCE] Arbitrary text
+[FILEPATH] Arbitrary text
+[DELAY] 0
+[COMMENT] Arbitrary text
+[END INFORMATION]
+[SUBTITLE]
+[COLF]&HFFFFFF,[SIZE]12,[FONT]Times New Roman
+00:01:00.10,00:02:00.20
+Oh, no.
+The eggs are hatching!
+<blank line>
+00:02:00.30,00:03:00.40
+No, never mind, I was hallucinating.
